--- a/ProductStore.Web/Areas/Administrator/Views/Category/Index.cshtml
+++ b/ProductStore.Web/Areas/Administrator/Views/Category/Index.cshtml
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<table class="table table-bordered table-striped" style="width:100%;">
+<table id="tblList" class="table table-bordered table-striped" style="width:100%;">
     <thead>
         <tr>
             <th>
