--- a/ProductStore.Web/Areas/EndUser/Views/Home/Index.cshtml
+++ b/ProductStore.Web/Areas/EndUser/Views/Home/Index.cshtml
@@ -7,18 +7,8 @@
     <h1 class="display-4">Product Catalogue</h1>
 </div>
 
-<form asp-action="IndexSearch">
-    <div class="input-group md-form form-control-sm p-lg-0">
-        <input name="productName" class="form-control my-0 py-1 table-bordered" type="text" placeholder="Search" />
-        <div class="input-group-text">
-            <span class="input-group-text table-bordered fw-lighter" id="basic-text1">
-                <i class="bi bi-search"></i>
-            </span>
-        </div>
-    </div>
-</form>
 
-<table class="table table-bordered table-striped" style="width:100%;">
+<table id="tblList" class="table table-bordered table-striped" style="width:100%;">
     <thead>
         <tr>
             <th>
@@ -48,23 +38,23 @@
                 <td width="10%">@item.CategoryId</td>
                 <td width="50%">
                     <div class="rating">
-                        <input type="radio" id="star5" asp-for="product.Rating" value="5" onclick="handleClick1(this,1);">
+                        <input type="radio" id="star5" asp-for="@item.Rating" value="5" onclick="handleClick1(this,1);">
                         <label for="star5" title="Great">5 stars</label>
                         <input type="hidden" Id="Rating1" name="Rating1" asp-for="@item.Rating" />
 
-                        <input type="radio" id="star4" asp-for="product.Rating" value="4" onclick="handleClick1(this,2);">
+                        <input type="radio" id="star4" asp-for="@item.Rating" value="4" onclick="handleClick1(this,2);">
                         <label for="star4" title="Good">4 stars</label>
                         <input type="hidden" Id="Rating2" name="Rating2" asp-for="@item.Rating" />
 
-                        <input type="radio" id="star3" asp-for="product.Rating" value="3" onclick="handleClick1(this,3);">
+                        <input type="radio" id="star3" asp-for="@item.Rating" value="3" onclick="handleClick1(this,3);">
                         <label for="star3" title="Okay">3 stars</label>
                         <input type="hidden" Id="Rating3" name="Rating3" asp-for="@item.Rating" />
 
-                        <input type="radio" id="star2" asp-for="product.Rating" value="2" onclick="handleClick1(this,4);">
+                        <input type="radio" id="star2" asp-for="@item.Rating" value="2" onclick="handleClick1(this,4);">
                         <label for="star2" title="Bad">2 stars</label>
                         <input type="hidden" Id="Rating4" name="Rating4" asp-for="@item.Rating" />
 
-                        <input type="radio" id="star1" asp-for="product.Rating" value="1" onclick="handleClick1(this,5);">
+                        <input type="radio" id="star1" asp-for="@item.Rating" value="1" onclick="handleClick1(this,5);">
                         <label for="star1" title="Very Bad">1 star</label>
                         <input type="hidden" Id="Rating5" name="Rating5" asp-for="@item.Rating" />
                     </div>
